feat(groupguard): migrate to mysql2 for ARM64 compatibility

--- a/napcat-plugin-groupguard/package.json
+++ b/napcat-plugin-groupguard/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "jimp": "^1.6.0",
     "jsqr": "^1.4.0",
-    "better-sqlite3": "^9.0.0",
+    "mysql2": "^3.9.0",
     "napcat-types": "0.0.9"
   },
   "devDependencies": {
